--- a/main.html
+++ b/main.html
@@ -1,27 +1,3 @@
 <html>
-<body>
-<div style="background-color:green; height:30%; width:100%; text-align:center; display:flex; justify-content:center; align-items:center;">
-    <h1>Greekforce</h1>
-</div>
-<div style="background-color:black;height:10%;width:100%;display:flex">
-<ul style="list-style-type:none;">
-<li style="color:white; display:inline;font-size:25px;padding:10px">home</li>
-<li style="color:white; display:inline;font-size:25px;padding:10px"> home</li>
-<li style="color:white; display:inline;font-size:25px;padding:10px">home</li>
-</ul>
-</div>
-<div style="background-color:white;height:60%;width:100%;display:flex">
-<div style="background-color:white;height:60%;width:30%;">
-<center><h1>Column A</h1></center>
-<p style="text-align:justify;margin-right:35px;margin-left:30px;line-height:30px">On June 12, 1988, Microsoft joined Ashton-Tate and Sybase to create a variant of Sybase SQL Server for IBM OS/2 (then developed jointly with Microsoft), which was released the following year.[1] This was the first version of Microsoft SQL Server, and served as Microsoft's entry to the enterprise-level database market, competing against Oracle, IBM, Informix, Ingres and later, Sybase. SQL Server 4.2 was shipped in 1992, bundled with OS/2 version 1.3, followed by version 4.21 for Windows NT, released alongside Windows NT 3.1. SQL Server 6.0 was the first version designed for NT, and did not include any direction from Sybase.
-
-About the time Windows NT was released in July 1993, Sybase and Microsoft parted ways and each pursued its own design and marketing schemes. Microsoft negotiated exclusive rights to all versions of SQL Server written for Microsoft operating systems. (In 1996 Sybase changed the name of its product to Adaptive Server Enterprise to avoid confusion with Microsoft SQL Server.) Until 1994, Microsoft's SQL Server carried three Sybase copyright notices as an indication of its origin.</p></div>
-<div style="background-color:white;height:60%;width:40%;"><center><h1>Column A</h1></center><p style="text-align:justify;margin-right:35px;margin-left:30px;line-height:30px">On June 12, 1988, Microsoft joined Ashton-Tate and Sybase to create a variant of Sybase SQL Server for IBM OS/2 (then developed jointly with Microsoft), which was released the following year.[1] This was the first version of Microsoft SQL Server, and served as Microsoft's entry to the enterprise-level database market, competing against Oracle, IBM, Informix, Ingres and later, Sybase. SQL Server 4.2 was shipped in 1992, bundled with OS/2 version 1.3, followed by version 4.21 for Windows NT, released alongside Windows NT 3.1. SQL Server 6.0 was the first version designed for NT, and did not include any direction from Sybase.
-
-About the time Windows NT was released in July 1993, Sybase and Microsoft parted ways and each pursued its own design and marketing schemes. Microsoft negotiated exclusive rights to all versions of SQL Server written for Microsoft operating systems. (In 1996 Sybase changed the name of its product to Adaptive Server Enterprise to avoid confusion with Microsoft SQL Server.) Until 1994, Microsoft's SQL Server carried three Sybase copyright notices as an indication of its origin.</p></div>
-<div style="background-color:white;height:60%;width:30%;"><center><h1>Column A</h1></center><p style="text-align:justify;margin-right:35px;margin-left:30px;line-height:30px">On June 12, 1988, Microsoft joined Ashton-Tate and Sybase to create a variant of Sybase SQL Server for IBM OS/2 (then developed jointly with Microsoft), which was released the following year.[1] This was the first version of Microsoft SQL Server, and served as Microsoft's entry to the enterprise-level database market, competing against Oracle, IBM, Informix, Ingres and later, Sybase. SQL Server 4.2 was shipped in 1992, bundled with OS/2 version 1.3, followed by version 4.21 for Windows NT, released alongside Windows NT 3.1. SQL Server 6.0 was the first version designed for NT, and did not include any direction from Sybase.
-
-About the time Windows NT was released in July 1993, Sybase and Microsoft parted ways and each pursued its own design and marketing schemes. Microsoft negotiated exclusive rights to all versions of SQL Server written for Microsoft operating systems. (In 1996 Sybase changed the name of its product to Adaptive Server Enterprise to avoid confusion with Microsoft SQL Server.) Until 1994, Microsoft's SQL Server carried three Sybase copyright notices as an indication of its origin.</p></div>
-</div>
-</body>
+<h1>This is a New Page</h1>
 </html>
